--- a/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="interesting">This should be interesting!</string>
     <string name="action_settings">Settings</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">This is fragment 2</string>
 </resources>
