Changed string resource for GenericFragment

--- a/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
@@ -5,5 +5,5 @@
     <string name="action_settings">Settings</string>
 
 <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">This is fragment 2</string>
+    <string name="hello_generic_fragment">This is GenericFragment</string>
 </resources>
