--- a/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
+++ b/AndroidApp/BT_SignalSender/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
 
 <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_generic_fragment">This is GenericFragment</string>
+
+<!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
